index2.html: project image file

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	</style>
   </head>
   <body>
+	<div style="display: flex; flex-direction: row;">
   <table>
 	<tr>
 		<td></td>
@@ -84,6 +85,10 @@
 	</td>
   </tr>
   </table>
+  <div>
+	<a href="index2.html">index2.html</a>
+  </div>
+	</div>
 <div id="drawing"></div>
 	<script>
 	var draw = SVG().addTo('#drawing').viewbox(0, 0, 640, 480)
